--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <img src="assets/img/instagram.png">
                 </div>
                 <form method="post">
-                    <input type="text" placeholder="Teléfono, usuario o correo electrónico">
-                    <input type="text" placeholder="Contraseña">
+                    <input type="text" placeholder="Teléfono, usuario o correo electrónico" required>
+                    <input type="text" placeholder="Contraseña" required>
                     <button class="login-btn">Entrar</button>
                 </form>
                 <div class="hr-container"><hr></div>
