--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <form method="post">
                     <input type="text" placeholder="Teléfono, usuario o correo electrónico" required>
-                    <input type="text" placeholder="Contraseña" required>
+                    <input type="password" placeholder="Contraseña" required>
                     <button class="login-btn">Entrar</button>
                 </form>
                 <div class="hr-container"><hr></div>
@@ -33,8 +33,8 @@
         <div class="download-container">
             <h3>Descarga la aplicación:</h3>
             <div class="img-container">
-                <img src="assets/img/appstore.png">
-                <img src="assets/img/googleplay.png">
+                <a href="#"><img src="assets/img/appstore.png"></a>
+                <a href="#"><img src="assets/img/googleplay.png"></a>
             </div>
         </div>
     </main>
